[package]
name = "todo_gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clitools = { path = "/home/benn/CODE/RUST/clitools" }
ctrlc = "3.4.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
#gtk = "0.18.1"
gtk4 = "0.8.2"
